--- a/experiment-f (d3)/bnAbs-GAN_experiment_f.ipynb
+++ b/experiment-f (d3)/bnAbs-GAN_experiment_f.ipynb
@@ -959,7 +959,7 @@
         "train_keys = list(pd.read_csv(file_name_train+'.csv')['seq-id'])\n",
         "train_keys_best = [x for x in train_keys if 'best' in x]\n",
         "\n",
-        "test_keys_best = test_keys_best = [k for k in best_dict.keys() if k not in train_keys_best]\n",
+        "test_keys_best = [k for k in best_dict.keys() if k not in train_keys_best]\n",
         "\n",
         "# Compute set of keys for negative instances of test set (most similar to positives ones)\n",
         "given_dict = {k:v for k,v in best_dict.items() if k in test_keys_best}\n",
